# legacy_server

Memcache/: memcache.xml
Memcache/Memcache/: Memcache.vcxproj  Memcache.vcxproj.filters  mem_cache.cpp  memcache.xml
dependencies/: i_controller.cpp  i_controller.h  i_log_system.cpp  i_log_system.h  log.h  msg.h  msg_from_client.h  schedule_task.h  shared_memory.h
dependencies/mysql_win_include/: config-win.h
dependencies/mysql_wrap_include/: Database.h  db_delay_helper.cpp  db_delay_helper.h  i_log_system.cpp
game_service_base/: MemCacheClient.h  MemCacheClient.hpp  game_ids.h  game_service_base.h  game_service_base.hpp  gift_dispatcher.cpp  gift_dispatcher.h  gift_system.cpp  gift_system.h  logic_base.h  logic_base.hpp  main.cpp  mem_cache_helper.h  memcache_defines.h  msg_cache.h  msg_client_common.cpp  msg_client_common.h  msg_server_common.h  platform_koko.h  player_base.h  service_config_base.h  service_config_base.hpp  telfee_match.cpp  telfee_match.h
koko_center/: error.h
koko_center/koko_center/: ban_word.txt  common.cpp  koko_center.cpp  koko_center.vcxproj  koko_socket.cpp  koko_socket.h  memcache.xml  (+6 more)
koko_coordinate/: ban_word.txt  function_time_counter.cpp  function_time_counter.h  game_channel.cpp  game_channel.h  game_srv_socket.cpp  game_srv_socket.h  koko_coordinate.cpp  koko_coordinate.sln  koko_coordinate.vcxproj  koko_coordinate.vcxproj.filters  match.cpp  match.h  match_msg.h  memcache.xml  msg_client.cpp  msg_client.h  msg_server.h  server_config.h  比赛实现流程.txt
mysqlwrapped/: CMakeLists.txt  Database.cpp  Query.cpp  enum_t.cpp
